# ckan-scripts

./: .gitignore  Install from source.md  Install_docker.md  all_packages.json  api_queries.ipynb  countries-iso-3166.json  countries_from_dataset_text.py  dataset_ember.json  dataset_ember_resources.json  import_datasets.py  install_ckan.sh  organisations.json  pyproject.toml  region_from_countries.py  setup_ckan_instance_config.py  tag_clean.py
harvesting/: README.md  SOURCES.md
